# LEIA

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  formulas.md  main.py  mock_db.py  pyproject.toml  setup_webhook.sh
src/api/routers/: bot.py  health.py  telegram.py
src/api/schemas/: Chat.py  Reset.py  Telegram.py
src/core/: config.py  logger.py  middleware.py  prompt.py  readings_database.py  security.py
src/graphs/: builder.py
src/graphs/llm/: model.py
src/graphs/memories/: BaseCheckpointer.py  checkpointer.py
src/graphs/memories/strategies/: InMemoryCheckpointer.py  PostgresCheckpointer.py
src/graphs/prompts/: labi_audio_prompt.md  labi_formatter_prompt.md  labi_image_prompt.md  labi_prompt.md  leia_formatter_prompt.md  leia_prompt.md
src/graphs/response_generation/nodes/: formatter.py  input_digest.py  main_bot.py
src/graphs/response_generation/schemas/: MainState.py
src/graphs/response_generation/tools/: DataAccess.py  MaintenanceSheet.py  RAGRetriever.py  WebSearch.py
src/models/: Devices.py  Measurements.py
src/repositories/: DataAccessRepository.py  DataAccessRepository_old.py
src/services/: GoogleService.py  GraphService.py  InputProcessor.py  Plotter.py  TelegramService.py
